[gd_scene load_steps=2 format=3 uid="uid://bwmxbhw3iry61"]

[ext_resource type="Script" path="res://addons/gfred2/dialogs/mission_goals_dialog.gd" id="1_k3m5p"]

[node name="MissionGoalsDialog" type="Window"]
title = "Mission Goals"
position = Vector2i(0, 36)
size = Vector2i(800, 600)
transient = true
exclusive = true
unresizable = true
script = ExtResource("1_k3m5p")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LeftPanel" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HSplitContainer/LeftPanel"]
layout_mode = 2
text = "Goals:"

[node name="GoalList" type="ItemList" parent="MarginContainer/VBoxContainer/HSplitContainer/LeftPanel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HSplitContainer/LeftPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="AddButton" type="Button" parent="MarginContainer/VBoxContainer/HSplitContainer/LeftPanel/HBoxContainer"]
layout_mode = 2
text = "Add Goal"

[node name="DeleteButton" type="Button" parent="MarginContainer/VBoxContainer/HSplitContainer/LeftPanel/HBoxContainer"]
layout_mode = 2
text = "Delete Goal"

[node name="RightPanel" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HSplitContainer/RightPanel"]
layout_mode = 2
text = "Goal Properties:"

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/HSplitContainer/RightPanel"]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 2

[node name="TypeLabel" type="Label" parent="MarginContainer/VBoxContainer/HSplitContainer/RightPanel/GridContainer"]
layout_mode = 2
text = "Type:"

[node name="GoalType" type="OptionButton" parent="MarginContainer/VBoxContainer/HSplitContainer/RightPanel/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
selected = 0
item_count = 3
popup/item_0/text = "Primary"
popup/item_1/text = "Secondary"
popup/item_1/id = 1
popup/item_2/text = "Hidden"
popup/item_2/id = 2

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer/HSplitContainer/RightPanel/GridContainer"]
layout_mode = 2
text = "Name:"

[node name="GoalName" type="LineEdit" parent="MarginContainer/VBoxContainer/HSplitContainer/RightPanel/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="DescLabel" type="Label" parent="MarginContainer/VBoxContainer/HSplitContainer/RightPanel/GridContainer"]
layout_mode = 2
text = "Description:"

[node name="GoalDesc" type="TextEdit" parent="MarginContainer/VBoxContainer/HSplitContainer/RightPanel/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 3
wrap_mode = 1

[node name="ScoreLabel" type="Label" parent="MarginContainer/VBoxContainer/HSplitContainer/RightPanel/GridContainer"]
layout_mode = 2
text = "Score:"

[node name="GoalScore" type="SpinBox" parent="MarginContainer/VBoxContainer/HSplitContainer/RightPanel/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 1000.0

[node name="TeamLabel" type="Label" parent="MarginContainer/VBoxContainer/HSplitContainer/RightPanel/GridContainer"]
layout_mode = 2
text = "Team:"

[node name="Team" type="OptionButton" parent="MarginContainer/VBoxContainer/HSplitContainer/RightPanel/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
selected = 0
item_count = 4
popup/item_0/text = "Friendly"
popup/item_1/text = "Hostile"
popup/item_1/id = 1
popup/item_2/text = "Neutral"
popup/item_2/id = 2
popup/item_3/text = "Unknown"
popup/item_3/id = 3

[node name="FlagsLabel" type="Label" parent="MarginContainer/VBoxContainer/HSplitContainer/RightPanel/GridContainer"]
layout_mode = 2
text = "Flags:"

[node name="FlagsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HSplitContainer/RightPanel/GridContainer"]
layout_mode = 2

[node name="GoalInvalid" type="CheckBox" parent="MarginContainer/VBoxContainer/HSplitContainer/RightPanel/GridContainer/FlagsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Invalid Goal"

[node name="NoMusic" type="CheckBox" parent="MarginContainer/VBoxContainer/HSplitContainer/RightPanel/GridContainer/FlagsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "No Music"

[node name="ButtonContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 2

[node name="OKButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "OK"

[node name="CancelButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Cancel"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HSplitContainer/LeftPanel/HBoxContainer/AddButton" to="." method="_on_add_goal_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HSplitContainer/LeftPanel/HBoxContainer/DeleteButton" to="." method="_on_delete_goal_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonContainer/OKButton" to="." method="_on_ok_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonContainer/CancelButton" to="." method="_on_cancel_pressed"]
